--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -24,7 +24,7 @@ jobs:
 
       # 3. Cài đặt thư viện
       - name: Install Dependencies
-        run: npm ci
+        run: npm ci --force
 
       # 4. TẠO FILE CONFIG (Script của bạn)
       - name: Create Firebase Config File
